@@ -1,5 +1,11 @@
 2010-05-13  Alan McGovern  <amcgovern@novell.com>
 
+	* StandardCollectionView.cs: Raise the CollectionChanged event
+	  when adding a new item and add a test on it. Fixes more of
+	  232.
+
+2010-05-13  Alan McGovern  <amcgovern@novell.com>
+
 	* StandardCollectionView.cs: Add extra tests to ensure that we
 	  emit PropertyChanged events correctly for CurrentItem and
 	  CurrentPosition. Both fields need to be updated before any
